Closed
Bug 282894
Opened 21 years ago
Closed 21 years ago
crashes anytime it needs the master password dialog [@ nsPrompt::DispatchCustomEvent]
Categories
(Firefox :: General, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: dveditz, Assigned: dveditz)
References
Details
(4 keywords)
Crash Data
Attachments
(1 file)
|
697 bytes,
patch
|
dmosedale
:
review+
dveditz
:
superreview+
dveditz
:
approval-aviary1.0.1+
|
Details | Diff | Splinter Review |
Regression from bug 277574. null mParent is derefed in
nsPrompt::DispatchCustomEvent() when bringing up the master password dialog.
Since we don't know the real parent content we should just skip it and let the
prompt service pick out the topmost window as it does now.
Maybe including promptPassword() was a bad idea -- sorry about suggesting it :-(
I think sometimes it has a real mParent though.
| Assignee | ||
Comment 2•21 years ago
|
||
Assignee: jst → dveditz
Status: NEW → ASSIGNED
Attachment #174833 -
Flags: superreview?(jst)
Attachment #174833 -
Flags: review?(dmose)
Attachment #174833 -
Flags: approval-aviary1.0.1?
Comment 3•21 years ago
|
||
Comment on attachment 174833 [details] [diff] [review]
null check
r=dmose
Attachment #174833 -
Flags: review?(dmose) → review+
| Assignee | ||
Comment 4•21 years ago
|
||
Comment on attachment 174833 [details] [diff] [review]
null check
dmose gave r+sr over IRC for this trivially correct patch.
a=me for drivers
Attachment #174833 -
Flags: superreview?(jst)
Attachment #174833 -
Flags: superreview+
Attachment #174833 -
Flags: approval-aviary1.0.1?
Attachment #174833 -
Flags: approval-aviary1.0.1+
| Assignee | ||
Comment 5•21 years ago
|
||
Fix checked into 1.7 and aviary1.0.1 branches. Trunk hasn't gotten bug 277574
yet so I'll call this FIXED and catch it in the trunk patch before landing.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Keywords: fixed-aviary1.0.1,
fixed1.7.6
Resolution: --- → FIXED
Updated•21 years ago
|
Summary: crashes anytime it needs the master password dialog → crashes anytime it needs the master password dialog [@ nsPrompt::DispatchCustomEvent]
| Assignee | ||
Comment 6•21 years ago
|
||
Wouldn't mind a retroactive r= from jst in case I've missed something
non-obvious. The crash was bad enough to go with what minimal review I could
scrape up late at night, but this close a release a double-check is always good.
*** Bug 282924 has been marked as a duplicate of this bug. ***
Comment 8•21 years ago
|
||
Was crashing with 2/18 1.0.1 build:
Incident ID: 3849553
Stack Signature nsPrompt::DispatchCustomEvent f759c3c9
Email Address jay@mozilla.org
Product ID Firefox10
Build ID 2005021805
Trigger Time 2005-02-21 16:08:06.0
Platform Win32
Operating System Windows NT 5.1 build 2600
Module firefox.exe + (003247ca)
URL visited https://bugzilla.mozilla.org/show_bug.cgi?id=282894
User Comments
Since Last Crash 11460 sec
Total Uptime 11460 sec
Trigger Reason Access violation
Source File, Line No.
d:/builds/tinderbox/Fx-Aviary1.0.1/WINNT_5.0_Depend/mozilla/embedding/components/windowwatcher/src/nsPrompt.cpp,
line 128
Stack Trace
nsPrompt::DispatchCustomEvent
[d:/builds/tinderbox/Fx-Aviary1.0.1/WINNT_5.0_Depend/mozilla/embedding/components/windowwatcher/src/nsPrompt.cpp,
line 128]
nsPrompt::PromptPassword
[d:/builds/tinderbox/Fx-Aviary1.0.1/WINNT_5.0_Depend/mozilla/embedding/components/windowwatcher/src/nsPrompt.cpp,
line 256]
PK11PasswordPrompt
[d:/builds/tinderbox/Fx-Aviary1.0.1/WINNT_5.0_Depend/mozilla/security/manager/ssl/src/nsNSSCallbacks.cpp,
line 188]
PK11_DoPassword
[d:/builds/tinderbox/Fx-Aviary1.0.1/WINNT_5.0_Depend/mozilla/security/nss/lib/pk11wrap/pk11slot.c,
line 1235]
Verified Fixed with latest Aviary 1.0.1 build:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.6) Gecko/20050221
Firefox/1.0.1
I did not see a crash with 2/18 Mozilla 1.7.6 builds...so not sure if it was
ever a problem. Has anyone else been able to reproduce this on that branch?
The focus issue from bug 277574 seems fixed, but no crash.
Status: RESOLVED → VERIFIED
Comment 9•21 years ago
|
||
NOTE: This still needs to lands on the Trunk. Should we reopen it?
Comment 10•21 years ago
|
||
Regarding Mozilla 1.7.6 builds... it seems that I can't get the master password
dialog to pop up at all. I have tried the various pref setting (on start,
everytime, etc)...and have never seen it ask for the master password when
logging into my.yahoo, bugzilla, the test case in bug 277574, or any other site
that I have used to save my login info.
Can someone else please test this with a 2/21 Mozilla 1.7.6 build or newer? Thanks.
| Assignee | ||
Comment 11•21 years ago
|
||
the trunk patch for bug 277574 (attachment 174906 [details] [diff] [review]) prevents this regression.
| Assignee | ||
Comment 12•21 years ago
|
||
Does your test profile *use* a master password? Go in to preferences and make
sure passwords are set to encrypted instead of "obscurred". This works fine in
my own build, but I haven't tried a release 1.7.6
Comment 13•21 years ago
|
||
Thanks Dan. I had a master password set, but I did not have the "Use
encryption..." checked under Prefs->Privacy & Security->Passwords->Encrypting
versus Obscuring. After doing that, I can verify there is no crash with:
Mozilla 1.7.6 branch: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.6)
Gecko/20050221
Mozilla 1.8b2/Trunk: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2)
Gecko/20050221
So, if the Trunk patch for bug 277574 covers the crash regression, we should be
good.
Updated•15 years ago
|
Crash Signature: [@ nsPrompt::DispatchCustomEvent]
You need to log in
before you can comment on or make changes to this bug.
Description
•