bug 282894 null check to prevent master password prompt crash. r+sr=dmose, a=dveditz